# weather

./: .gitignore  AIR_QUALITY_IMPLEMENTATION.md  API_KEY_SECRET_FLOW.md  AUTHENTICATION.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  NEXT_STEPS.md  PERMISSIONS.md  PRODUCTION_MIGRATION.md  QUICKSTART.md  README.md  UI_STRUCTURE.md  compose.yaml  create_admin.py  migrate_add_secret_viewed.py  migrate_database.py  migrate_production.py  pyproject.toml  requirements.txt  test_timezone.py
.github/workflows/: deploy.yml
app/: main.py
app/api/: admin.py  admin_api.py  auth.py  datatest.py  devices.py  docs.py  health.py  users.py  weather.py
app/auth/: flexible_auth.py  middleware.py  utils.py
app/database/: __init__.py  db.py  migrations.py  models.py
app/services/: __init__.py  address_client.py  air_quality_client.py  astronomy_client.py  geo_client.py  weather_client.py
app/templates/: admin.html  dashboard.html  docs.html  index.html  login.html  register.html
scripts/: bootstrap.sh  deploy.sh
